--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API TASK:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend/issues"
   },
-  "homepage": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend#readme"
+  "homepage": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend#readme",
+  "devDependencies": {
+    "nodemon": "^1.12.1"
+  },
+  "dependencies": {
+    "hapi": "^16.1.1"
+  }
 }
