--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,9 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
-    "hapi": "^16.1.1"
+    "eslint": "^4.12.0",
+    "hapi": "^16.1.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
