--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "*.js",
-      "!(index.js)",
-      "!(route.js)"
+      "src/*.js",
+      "!(index.js)"
     ]
   }
 }
