--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "simulation-project-iserv-backend",
-  "version": "1.0.0",
-  "description": "API TASK:",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend/issues"
-  },
-  "homepage": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend#readme",
-  "devDependencies": {
-    "nodemon": "^1.12.1"
-  },
-  "dependencies": {
-    "hapi": "^16.1.1"
-  }
+    "name": "simulation-project-iserv-backend",
+    "version": "1.0.0",
+    "description": "API TASK:",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest --coverage",
+        "start": "nodemon index.js",
+        "test:watch": "jest --watchAll"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend/issues"
+    },
+    "homepage": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend#readme",
+    "devDependencies": {
+        "nodemon": "^1.12.1"
+    },
+    "dependencies": {
+        "hapi": "^16.6.2",
+        "jest": "^21.2.1",
+        "request-promise": "^4.2.2"
+    }
 }
