--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "API TASK:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js",
+    "test": "jest --coverage",
+    "test:watch": "jest --watchAll"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "*.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -21,6 +27,9 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
-    "hapi": "^16.1.1"
+    "hapi": "16",
+    "jest": "^21.2.1",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
