--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "API TASK:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "jest --coverage",
+    "start": "nodemon index.js",
+    "testwatch": "jest --watchAll"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,9 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
-    "hapi": "^16.1.1"
+    "hapi": "16",
+    "jest": "^21.2.1",
+    "request-promise": "^4.2.2",
+    "request-promises": "^1.1.0"
   }
 }
