--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend#readme",
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "eslint": "^4.12.0",
+    "nodemon": "^1.12.1",
+    "test": "^0.6.0"
   },
   "dependencies": {
-    "hapi": "^16.1.1"
+    "hapi": "^16.6.2",
+    "joi": "^13.0.2",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2"
   }
 }
