--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API TASK:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node index.js"
   },
   "repository": {
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend#readme",
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "jest": "^21.2.1"
   },
   "dependencies": {
-    "hapi": "^16.1.1"
+    "hapi": "^16.1.1",
+    "request-promise": "^4.2.2"
   }
 }
