--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API TASK:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --coverage",
+    "testWatch": "jest --watchAll",
     "start": "nodemon index.js"
   },
   "repository": {
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend#readme",
   "devDependencies": {
+    "jest": "^21.2.1",
     "nodemon": "^1.12.1"
   },
   "dependencies": {
