--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "API TASK:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "jest",
+    "start": "node index.js",
+    "test:wc": "jest --watchAll --coverage"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/CodeAcademyBKK2017/simulation-project-iserv-backend#readme",
   "devDependencies": {
     "eslint": "^4.12.0",
+    "jest": "^21.2.1",
     "nodemon": "^1.12.1",
     "test": "^0.6.0"
   },
