--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "nodemon index.js",
     "test": "jest --coverage",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll --coverage"
   },
   "jest": {
     "collectCoverageFrom": [
-      "*.js"
+      "src/*.js",
+      "joiSchema/*.js"
     ]
   },
   "repository": {
